# fairdream

./: Dockerfile  Makefile  README.md  pyproject.toml
data/: uncorrected_augmented_train_valid_set_label_encoded.csv
fairdream/: __init__.py  compute_scores.py  correction.py  data_preparation.py  detection.py  experiments.py  fairdream_display.py  multiclass_fair_preparation.py  plots.py
notebooks/: FairDream_metrics_test.ipynb  Fair_detection_correction_xgb_binary_classification_census.ipynb
